--- a/lustre/doc/lfs.1
+++ b/lustre/doc/lfs.1
@@ -84,6 +84,15 @@ lfs \- Lustre utility to create a file with specific striping pattern, find the 
 .br
 .B lfs data_version [-n] \fB<filename>\fR
 .br
+.B lfs migrate [-c <stripe_count> ]
+			 \fB[ -h ]
+			 \fB[ -l ]
+			 \fB[ -n ]
+			 \fB[ -q ]
+			 \fB[ -R ]
+			 \fB[ -s ]
+			 \fB[ -y ] <directory|filename>\fR
+.br
 .B lfs --version
 .br
 .B lfs help
@@ -301,24 +310,17 @@ Even without -n, race conditions are possible and data version should be
 checked before and after an operation to be confident the data did not change
 during it.
 .TP
-.B mkdir <--index|-i mdt_index> <dir>
-Allocate a new directory on a specified MDT.  
-
-The "lfs mkdir" command is only executable by root unless
-"mdt.*.enable_remote_dir_gid" is set via "lctl set_param" to be either a
-non-zero GID to limit it to a single group (e.g. "operator" or "admin"),
-or "-1" to allow any group to create remote directories.
-
-The root of the file system is on MDT0000, and directories and files inherit the
-MDT of their parent directory unless a different MDT is specified with this
-command.
-
-By default, only directories on MDT0000 can contain directories that are not on
-the same MDT.  However, if "mdt.*.enable_remote_dir" is set non-zero on an MDT
-then it will allow creating remote directories that have parents other than
-MDT0000. This is restricted to avoid creating directory trees that have
-intermediate path components on a series different MDTs and become unavailable
-if any of the intermediate MDTs are offline.
+.B mkdir
+lfs mkdir is documented in the man page: lfs-mkdir. NOTE:
+.B lfs setdirstripe
+is an alias of the command
+.B lfs mkdir
+.TP
+.B migrate
+lfs migrate is documented in the man page: lfs_migrate. NOTE:
+.B lfs mv
+is an deprecated alias of the command
+.B lfs migrate
 .TP
 .B --version
 Output the build version of the lfs utility. Use "lctl lustre_build_version" to get the version of the Lustre kernel modules
@@ -396,5 +398,6 @@ The lfs command is part of the Lustre filesystem.
 .BR lfs-setdirstripe (1),
 .BR lfs-getdirstripe (1),
 .BR lfs-mkdir (1),
+.BR lfs_migrate (1),
 .BR lctl (8),
 .BR lustre (7)
