--- a/lustre/ChangeLog
+++ b/lustre/ChangeLog
@@ -1,3 +1,5 @@
+Latest tag 2.7.63 Sun Dec  6 00:00:20 PST 2015
+
 TBD Intel Corporation
        * version 2.8.0
        * See https://wiki.hpdd.intel.com/display/PUB/Lustre+Support+Matrix
