LU-0000 noop: canary patch to provide build and test control.
Control for build and test of tag 2.7.64.

Signed-off-by: Richard Henwood <richard.henwood@intel.com>
Change-Id: Idc7b894fa1e5a3509000801f76a5fa0a3d9eb898

--- a/lustre/ChangeLog
+++ b/lustre/ChangeLog
@@ -1,3 +1,5 @@
+Latest tag 2.7.64 Wed Jan  6 00:00:45 PST 2016
+
 TBD Intel Corporation
        * version 2.8.0
        * See https://wiki.hpdd.intel.com/display/PUB/Lustre+Support+Matrix
