LU-7606 sanity-test_230b FAIL: nested remote directory create succeed!
The ability to create nested remote directories depends on a /proc
setting on the MDS whether the user or group can create remote
directories and/or remote directories with parents other than MDT0000.

Those nested remote check under /proc has been removed in master, since
those loop namespace tree can not be avoided with cross-MDT rename and
link.

It seems mdt_enable_remote_dir still exists under /proc and this patch
takes care of the same.

Change-Id: I8dad4c03f5dbf9022873ff9f8ae32c18ace6a066
Signed-off-by: Parinay Kondekar <parinay.kondekar@seagate.com>
Signed-off-by: Di Wang <di.wang@intel.com>

--- a/lustre/doc/lfs.1
+++ b/lustre/doc/lfs.1
@@ -304,21 +304,14 @@ during it.
 .B mkdir <--index|-i mdt_index> <dir>
 Allocate a new directory on a specified MDT.  
 
-The "lfs mkdir" command is only executable by root unless
-"mdt.*.enable_remote_dir_gid" is set via "lctl set_param" to be either a
-non-zero GID to limit it to a single group (e.g. "operator" or "admin"),
-or "-1" to allow any group to create remote directories.
+The "lfs mkdir" command is only executable by root.
 
 The root of the file system is on MDT0000, and directories and files inherit the
 MDT of their parent directory unless a different MDT is specified with this
 command.
 
 By default, only directories on MDT0000 can contain directories that are not on
-the same MDT.  However, if "mdt.*.enable_remote_dir" is set non-zero on an MDT
-then it will allow creating remote directories that have parents other than
-MDT0000. This is restricted to avoid creating directory trees that have
-intermediate path components on a series different MDTs and become unavailable
-if any of the intermediate MDTs are offline.
+the same MDT.
 .TP
 .B --version
 Output the build version of the lfs utility. Use "lctl lustre_build_version" to get the version of the Lustre kernel modules
