--- a/lustre/ChangeLog
+++ b/lustre/ChangeLog
@@ -1,3 +1,5 @@
+Latest tag 2.7.65 Wed Jan 13 00:00:10 PST 2016
+
 TBD Intel Corporation
        * version 2.8.0
        * See https://wiki.hpdd.intel.com/display/PUB/Lustre+Support+Matrix
